--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
     --build-arg ROS_DISTRO=${ROS_DISTRO_TARGET}
     --pull=true ${TRAVIS_BUILD_DIR}
     || (gh-pr-comment "[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
+  - travis_retry wget --timeout=10 -O /tmp/codecovenv https://codecov.io/env
   - docker run --rm
     -e TRAVIS_PULL_REQUEST
     -e TRAVIS_REPO_SLUG
@@ -38,7 +39,7 @@ script:
     -e GITHUB_API_URL_BASE
     -e TRAVIS_BUILD_NUMBER
     -e TRAVIS_BUILD_WEB_URL
-    $(bash <(curl -s https://codecov.io/env))
+    $(bash /tmp/codecovenv)
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
   - bash -c "[ x${COVERAGE_TEST} != xtrue ] && .travis/save_cache.sh || true"
 
