Use helper script to pass env vars

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,10 @@ script:
     || (gh-pr-comment "[[#${TRAVIS_BUILD_NUMBER}](${TRAVIS_BUILD_WEB_URL})] FAILED on ${ROS_DISTRO_TARGET}" "docker build failed"; false)
   - travis_retry wget --timeout=10 -O /tmp/codecovenv https://codecov.io/env
   - docker run --rm
-    -e TRAVIS_PULL_REQUEST
-    -e TRAVIS_REPO_SLUG
-    -e TRAVIS_BOT_GITHUB_TOKEN
     -e COVERAGE_TEST
-    -e GITHUB_API_URL_BASE
     -e TRAVIS_BUILD_NUMBER
     -e TRAVIS_BUILD_WEB_URL
+    $(sh <(curl -s https://raw.githubusercontent.com/at-wat/gh-pr-comment/master/env.sh))
     $(bash /tmp/codecovenv)
     ${DOCKER_CACHE_TARGET}:${ROS_DISTRO_TARGET} /catkin_ws/src/${PACKAGE_NAME}/.travis/test.sh
   - bash -c "[ x${COVERAGE_TEST} != xtrue ] && .travis/save_cache.sh || true"
