--- a/joystick_interrupt/test/CMakeLists.txt
+++ b/joystick_interrupt/test/CMakeLists.txt
@@ -3,4 +3,4 @@ add_rostest_gtest(test_joystick_interrupt
   src/test_joystick_interrupt.cpp
 )
 target_link_libraries(test_joystick_interrupt ${catkin_LIBRARIES})
-add_dependencies(test_joystick_interrupt joystick_interrupt)
+add_dependencies(test_joystick_interrupt joystick_interrupt joystick_mux)
