--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -29,11 +29,16 @@ costmap_3d:
 planner_3d:
   num_threads: 2
   freq: 2.0
-  freq_min: 0.5
+  freq_min: 1.0
+  costmap_watchdog: 2.0
+  temporary_escape: true
   local_range: 2.0
-  remember_updates: true
+  remember_updates: false
   hist_ignore_range: 0.0
   hist_ignore_range_max: 1.5
+  pos_jump: 0.5
+  yaw_jump: 1.0
+  jump_detect_frame: odom
 spur:
   hz: 30.0
   k_dist: 16.0
