--- a/planner_cspace/package.xml
+++ b/planner_cspace/package.xml
@@ -3,6 +3,7 @@
   <name>planner_cspace</name>
   <version>0.11.2</version>
   <description>3-dof configuration space planner for mobile robot</description>
+  <!-- testing -->
 
   <maintainer email="atsushi.w@ieee.org">Atsushi Watanabe</maintainer>
   <license>BSD</license>
