--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,6 +35,8 @@ jobs:
           path: /home/runner/layers.tar
           key: docker-layers-${{ matrix.env }}-${{ github.sha }}
           restore-keys: docker-layers-${{ matrix.env }}-
+      - name: Set env
+        run: echo "${{ matrix.env }}" | tee ${GITHUB_ENV}
 
       - name: Get dataset
         run: if [ -x .github/get_dataset.sh ]; then .github/get_dataset.sh; fi
@@ -48,9 +50,9 @@ jobs:
 
       - name: Test
         run: |
-          eval export ${{ matrix.env }}
           eval export $(cat .github/test.conf)
           echo "ROS_DISTRO=${ROS_DISTRO}" >> ${GITHUB_ENV}
+
           BUILD_LINK="[${GITHUB_RUN_NUMBER}]"
           touch .rosinstall .rosinstall-isolated
           echo '::group::docker build'
@@ -61,6 +63,7 @@ jobs:
             --pull=true . \
             || (gh-pr-comment "${BUILD_LINK} FAILED on ${ROS_DISTRO}" "docker build failed"; false)
           echo '::endgroup::'
+
           mkdir -p /tmp/log
           docker run --rm \
             -e BUILD_LINK=${BUILD_LINK} \
@@ -73,7 +76,7 @@ jobs:
             /catkin_ws/src/self/.github/test.sh
       - name: Compress logs
         if: always()
-        run: cd /tmp; tar cJf logs.tar.xz log
+        run: cd /tmp; tar -cJf logs.tar.xz log
       - name: Upload ROS logs
         if: always()
         uses: actions/upload-artifact@v3
@@ -84,7 +87,6 @@ jobs:
       - uses: codecov/codecov-action@v3
       - name: Save layer cache
         run: |
-          eval export ${{ matrix.env }}
           LAYERS=$(docker history -q tester | grep -v missing)
           echo "layers: $(echo ${LAYERS})"
           docker save -o /home/runner/layers.tar ${LAYERS}
