modified package libs. Extracted layers into new library.

--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -3,7 +3,6 @@ project(costmap_cspace)
 
 set(CATKIN_DEPENDS
   roscpp
-
   geometry_msgs
   laser_geometry
   nav_msgs
@@ -11,7 +10,6 @@ set(CATKIN_DEPENDS
   tf2_geometry_msgs
   tf2_ros
   tf2_sensor_msgs
-
   costmap_cspace_msgs
   neonavigation_common
 )
@@ -23,15 +21,19 @@ catkin_package(
   CATKIN_DEPENDS ${CATKIN_DEPENDS}
 )
 
-
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include/costmap_cspace) #add header files in costmap_cspace
 
+# Add library for costmap_3d_layers.cpp
+add_library(costmap_3d_layers_lib src/costmap_3d_layers.cpp)
+target_link_libraries(costmap_3d_layers_lib ${catkin_LIBRARIES})
+add_dependencies(costmap_3d_layers_lib ${catkin_EXPORTED_TARGETS})
 
+# Add executable and link to the new library
 add_executable(costmap_3d src/costmap_3d.cpp)
-target_link_libraries(costmap_3d ${catkin_LIBRARIES})
+target_link_libraries(costmap_3d costmap_3d_layers_lib ${catkin_LIBRARIES})
 add_dependencies(costmap_3d ${catkin_EXPORTED_TARGETS})
 set_property(TARGET costmap_3d PROPERTY PUBLIC_HEADER
   include/costmap_cspace/pointcloud_accumulator.h
@@ -49,17 +51,6 @@ add_executable(largemap_to_map src/largemap_to_map.cpp)
 target_link_libraries(largemap_to_map ${catkin_LIBRARIES})
 add_dependencies(largemap_to_map ${catkin_EXPORTED_TARGETS})
 
-add_library(costmap_3d_layers src/costmap_3d_layers.cpp)
-add_executable(costmap_3d_layers src/costmap_3d_layers.cpp)
-target_link_libraries(costmap_3d_layers ${catkin_LIBRARIES})
-add_dependencies(costmap_3d_layers ${catkin_EXPORTED_TARGETS})
-
-# Add a library for the costmap 3D layer headers
-install(DIRECTORY include/costmap_cspace/costmap_3d_layer/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}/costmap_cspace/costmap_3d_layer
-  FILES_MATCHING PATTERN "*.h"
-)
-
 if(CATKIN_ENABLE_TESTING)
   find_package(rostest REQUIRED)
   add_subdirectory(test)
@@ -69,13 +60,12 @@ if(CATKIN_ENABLE_TESTING)
   roslint_add_test()
 endif()
 
-
 install(TARGETS
     costmap_3d
-    costmap_3d_layers
     largemap_to_map
     laserscan_to_map
     pointcloud2_to_map
+    costmap_3d_layers_lib  # Include the new library in the installation
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
