--- a/costmap_cspace/CMakeLists.txt
+++ b/costmap_cspace/CMakeLists.txt
@@ -27,11 +27,15 @@ catkin_package(
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(include ${catkin_INCLUDE_DIRS})
 
+include_directories(include ${catkin_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include/costmap_cspace)
 
-add_executable(costmap_3d src/costmap_3d.cpp src/costmap_3d_layers.cpp)
-target_link_libraries(costmap_3d ${catkin_LIBRARIES})
+add_library(costmap_3d_layers src/costmap_3d_layers.cpp)
+target_link_libraries(costmap_3d_layers ${catkin_LIBRARIES})
+add_dependencies(costmap_3d_layers ${catkin_EXPORTED_TARGETS})
+
+add_executable(costmap_3d src/costmap_3d.cpp)
+target_link_libraries(costmap_3d costmap_3d_layers ${catkin_LIBRARIES})
 add_dependencies(costmap_3d ${catkin_EXPORTED_TARGETS})
 set_property(TARGET costmap_3d PROPERTY PUBLIC_HEADER
   include/costmap_cspace/pointcloud_accumulator.h
@@ -65,6 +69,7 @@ install(TARGETS
     largemap_to_map
     laserscan_to_map
     pointcloud2_to_map
+    costmap_3d_layers
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
