--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -19,15 +19,15 @@ catkin_add_gtest(test_distance_map
 )
 target_link_libraries(test_distance_map ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 
-catkin_add_gtest(test_distance_map2
-  src/test_distance_map2.cpp
+catkin_add_gtest(test_distance_map_fast_update
+  src/test_distance_map_fast_update.cpp
   ../src/distance_map.cpp
   ../src/grid_astar_model_3dof.cpp
   ../src/motion_cache.cpp
   ../src/motion_primitive_builder.cpp
   ../src/rotation_cache.cpp
 )
-target_link_libraries(test_distance_map2 ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
+target_link_libraries(test_distance_map_fast_update ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${OpenMP_CXX_FLAGS})
 
 catkin_add_gtest(test_grid_metric_converter src/test_grid_metric_converter.cpp)
 target_link_libraries(test_grid_metric_converter ${catkin_LIBRARIES} ${Boost_LIBRARIES})
