--- a/planner_cspace/test/CMakeLists.txt
+++ b/planner_cspace/test/CMakeLists.txt
@@ -79,7 +79,7 @@ add_rostest_gtest(test_navigate
   src/test_navigate.cpp
 )
 target_link_libraries(test_navigate ${catkin_LIBRARIES})
-add_dependencies(test_navigate planner_3d)
+add_dependencies(test_navigate planner_3d patrol)
 
 add_rostest(test/navigation_rostest.test
   ARGS antialias_start:=true
