--- a/planner_cspace/cfg/Planner3D.cfg
+++ b/planner_cspace/cfg/Planner3D.cfg
@@ -19,10 +19,10 @@ gen.add("weight_backward", double_t, 0, "", 0.9, 0.0, 1000.0)
 gen.add("weight_ang_vel", double_t, 0, "", 1.0, 0.0, 1000.0)
 gen.add("weight_costmap", double_t, 0, "", 50.0, 0.0, 1000.0)
 gen.add("weight_costmap_turn", double_t, 0, "", 0.0, 0.0, 1000.0)
-gen.add("weight_costmap_turn_heuristics", double_t, 0, "", 100.0, 0.0, 1000.0)
+gen.add("weight_costmap_turn_heuristics", double_t, 0, "The weight of the heuristic cost of in-place turning at grid cells with costs", 100.0, 0.0, 1000.0)
 gen.add("weight_remembered", double_t, 0, "", 1000.0, 0.0, 1000.0)
 gen.add("cost_in_place_turn", double_t, 0, "", 30.0, 0.0, 1000.0)
-gen.add("turn_penalty_cost_threshold", int_t, 0, "", 0, 0, 100)
+gen.add("turn_penalty_cost_threshold", int_t, 0, "Penalty costs of in-place turning are not added when the cost of the grid cell is lower than this value", 0, 0, 100)
 gen.add("hysteresis_max_dist", double_t, 0, "", 0.1, 0.0, 10.0)
 gen.add("hysteresis_expand", double_t, 0, "", 0.1, 0.0, 10.0)
 gen.add("weight_hysteresis", double_t, 0, "", 5.0, 0.0, 1000.0)
