--- a/planner_cspace/cfg/Planner3D.cfg
+++ b/planner_cspace/cfg/Planner3D.cfg
@@ -46,5 +46,7 @@ gen.add("force_goal_orientation", bool_t, 0, "", True)
 gen.add("temporary_escape", bool_t, 0, "", True)
 gen.add("fast_map_update", bool_t, 0, "", False)
 gen.add("max_retry_num", int_t, 0, "", -1, -1, 100)
+gen.add("keep_a_part_of_previous_path", bool_t, 0, "If true, a part of the previous path is preserved to avoid radical path changes.", False)
+gen.add("dist_stop_to_previous_path", double_t, 0, "Valid only when keep_a_part_of_previous_path is true. This should be the same as dist_stop parameter of trajectory_tracker.", 0.1, 0.0, 1.0)
 
 exit(gen.generate(PACKAGE, "planner_cspace", "Planner3D"))
