--- a/safety_limiter/CMakeLists.txt
+++ b/safety_limiter/CMakeLists.txt
@@ -1,43 +1,19 @@
-cmake_minimum_required(VERSION 3.1.3)
+cmake_minimum_required(VERSION 3.5)
 project(safety_limiter)
 
-set(CATKIN_DEPENDS
-    roscpp
-
-    diagnostic_updater
-    dynamic_reconfigure
-    geometry_msgs
-    pcl_conversions
-    pcl_ros
-    sensor_msgs
-    std_msgs
-    tf2_ros
-    tf2_sensor_msgs
-    safety_limiter_msgs
-
-    neonavigation_common
-)
-
-find_package(catkin REQUIRED COMPONENTS ${CATKIN_DEPENDS})
+find_package(ament_cmake_auto REQUIRED)
 find_package(PCL REQUIRED)
 find_package(Eigen3 REQUIRED)
-find_package(xmlrpcpp REQUIRED)
+ament_auto_find_build_dependencies()
 
-generate_dynamic_reconfigure_options(
-  cfg/SafetyLimiter.cfg
-)
-
-catkin_package(
-  CATKIN_DEPENDS ${CATKIN_DEPENDS}
-)
-
-
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include_directories(${catkin_INCLUDE_DIRS} ${PCL_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
+# Binary installed pcl provided by Linux distro is built with -march=native
+# which causes a lot of compatibility problems.
+# Define PCL_NO_PRECOMPILE to disable using the binary version.
+add_definitions(-DPCL_NO_PRECOMPILE)
 
 # Workaround for debian stretch build (https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=894656)
 list(REMOVE_ITEM PCL_LIBRARIES
@@ -52,31 +28,35 @@ list(REMOVE_ITEM PCL_LIBRARIES
 # Workaround for the bug in PCL(<1.8.1) https://github.com/PointCloudLibrary/pcl/issues/1406
 remove_definitions(-DDISABLE_LIBUSB-1.0)
 
-# Binary installed pcl provided by Linux distro is built with -march=native
-# which causes a lot of compatibility problems.
-# Define PCL_NO_PRECOMPILE to disable using the binary version.
-add_definitions(-DPCL_NO_PRECOMPILE)
+include_directories(${PCL_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS})
+ament_auto_add_executable(safety_limiter src/safety_limiter.cpp)
 
+if(BUILD_TESTING)
+  find_package(GTest REQUIRED)
+  set(ament_cmake_copyright_FOUND TRUE)
+  set(ament_cmake_uncrustify_FOUND TRUE)
+  set(ament_cmake_cpplint_FOUND TRUE)
+  ament_auto_find_test_dependencies()
+  ament_lint_auto_find_test_dependencies()
 
-add_executable(safety_limiter src/safety_limiter.cpp)
-target_link_libraries(safety_limiter ${catkin_LIBRARIES} ${PCL_LIBRARIES})
-add_dependencies(safety_limiter ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencfg)
+  include_directories(test/include)
+  ament_auto_add_executable(test_safety_limiter test/src/test_safety_limiter.cpp)
+  target_link_libraries(test_safety_limiter ${GTEST_LIBRARIES})
+  ament_auto_add_executable(test_safety_limiter2 test/src/test_safety_limiter2.cpp)
+  target_link_libraries(test_safety_limiter2 ${GTEST_LIBRARIES})
 
-if(CATKIN_ENABLE_TESTING)
-  find_package(rostest REQUIRED)
-  find_package(nav_msgs REQUIRED)
-  find_package(tf2_geometry_msgs REQUIRED)
-  add_subdirectory(test)
-
-  find_package(roslint REQUIRED)
-  roslint_cpp()
-  roslint_add_test()
+  install(DIRECTORY
+    test/configs
+    DESTINATION share/${PROJECT_NAME}/test/
+  )
+  add_launch_test(test/test/test_safety_limiter_launch.py
+    TARGET test_safety_limiter
+    TIMEOUT 120
+  )
+  add_launch_test(test/test/test_safety_limiter2_launch.py
+    TARGET test_safety_limiter2
+    TIMEOUT 30
+  )
 endif()
 
-
-install(TARGETS
-    safety_limiter
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+ament_auto_package()
