Subscribe laser in safety_limiter

--- a/safety_limiter/package.xml
+++ b/safety_limiter/package.xml
@@ -32,6 +32,8 @@
   <depend>nav2_costmap_2d</depend>
   <depend>rclcpp</depend>
 
+  <depend>laser_geometry</depend>
+
   <build_depend>libpcl-all-dev</build_depend>
   <exec_depend>libpcl-all</exec_depend>
   <export>
