--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -34,6 +34,8 @@ planner_3d:
   remember_updates: true
   hist_ignore_range: 0.0
   hist_ignore_range_max: 1.5
+  esc_range: 1.0
+  esc_range_min: 0.5
 spur:
   hz: 30.0
   k_dist: 16.0
