Add goal tolerance for temporary goal

--- a/planner_cspace/cfg/Planner3D.cfg
+++ b/planner_cspace/cfg/Planner3D.cfg
@@ -45,6 +45,8 @@ gen.add("sw_wait", double_t, 0, "", 2.0, 0.0, 100.0)
 gen.add("find_best", bool_t, 0, "", True)
 gen.add("force_goal_orientation", bool_t, 0, "", True)
 gen.add("temporary_escape", bool_t, 0, "", True)
+gen.add("temporary_escape_tolerance_lin", double_t, 0, "", 0.1, 0.0, 10.0)
+gen.add("temporary_escape_tolerance_ang", double_t, 0, "", 1.57, 0.0, 3.14159265359)
 gen.add("fast_map_update", bool_t, 0, "", False)
 gen.add("max_retry_num", int_t, 0, "", -1, -1, 100)
 gen.add("keep_a_part_of_previous_path", bool_t, 0, "If true, a part of the previous path is preserved to avoid radical path changes.", False)
