--- a/neonavigation_launch/config/navigate.yaml
+++ b/neonavigation_launch/config/navigate.yaml
@@ -33,7 +33,7 @@ planner_3d:
   hist_ignore_range: 0.0
   hist_ignore_range_max: 1.5
   esc_range: 1.0
-  esc_range_min: 0.5
+  esc_range_min_ratio: 0.5
   temporary_escape_tolerance_lin: 0.2
   keep_a_part_of_previous_path: true
 spur:
