--- a/planner_cspace/cfg/Planner3D.cfg
+++ b/planner_cspace/cfg/Planner3D.cfg
@@ -52,5 +52,6 @@ gen.add("max_retry_num", int_t, 0, "", -1, -1, 100)
 gen.add("keep_a_part_of_previous_path", bool_t, 0, "If true, a part of the previous path is preserved to avoid radical path changes.", False)
 gen.add("dist_stop_to_previous_path", double_t, 0, "Valid only when keep_a_part_of_previous_path is true. This should be the same as dist_stop parameter of trajectory_tracker.", 0.1, 0.0, 1.0)
 gen.add("trigger_plan_by_costmap_update", bool_t, 0, "", False)
+gen.add("relocation_acceptable_cost", int_t, 0, "Acceptable cost of the relocated position in the first place. Some of the function may fallback to the cost of 99 if acceptable grid is not found.", 50, 0, 99)
 
 exit(gen.generate(PACKAGE, "planner_cspace", "Planner3D"))
