--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -27,9 +27,9 @@ RUN find . -name package.xml | xargs -ISRC cp --parents SRC /repos-manifests/
 # ========================================
 FROM ros:${ROS_DISTRO}-ros-core
 
-#RUN sed -e \
-#  's|http://archive\.ubuntu\.com|http://us-east-1.ec2.archive.ubuntu.com|' \
-#  -i /etc/apt/sources.list
+RUN sed -e \
+  's|http://archive\.ubuntu\.com|http://us-east-1.ec2.archive.ubuntu.com|' \
+  -i /etc/apt/sources.list
 
 ENV DEBIAN_FRONTEND=noninteractive
 
